fix input placeholders alignment

--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -28,5 +28,6 @@
         font-family: $hf-font-family-sans-serif;
         font-size: $hf-font-size-base;
         color: $hf-color-gray-medium;
+        line-height: $hf-height-input;
     }
 }
