--- a/src/variables.scss
+++ b/src/variables.scss
@@ -35,7 +35,6 @@ $hf-line-height-medium: 1.5;
 /* Sizes */
 $hf-gutter: 10px;
 $hf-width-container: 1140px;
-$hf-height-input: 36px;
 $hf-padding-big: $hf-gutter*3;
 $hf-padding-main: $hf-gutter*2;
 $hf-padding-middle: $hf-gutter*1.5;
